# Ttechnology_development_and_defenderend_data_bases_last_work

./: .gitignore  README.md  alembic.ini  pyproject.toml
docs/: description.md
entities/: main.py  models.py
